--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./css/Style.css">
-    <link rel="stylesheet" href="./css/skinn/color-1.css">
+    <link rel="stylesheet" href="/css/Style.css">
+    <link rel="stylesheet" href="/css/skinn/color-1.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
            <!----- Style switchers-------->
-    <link rel="stylesheet" href="./css/skinn/color-1.css" class="alternate-style" title="color-1" disabled>
-    <link rel="stylesheet" href="./css/skinn/color-2.css" class="alternate-style" title="color-2" disabled>
-    <link rel="stylesheet" href="./css/skinn/color-3.css" class="alternate-style" title="color-3" disabled>
-    <link rel="stylesheet" href="./css/skinn/color-4.css" class="alternate-style" title="color-4" disabled>
-    <link rel="stylesheet" href="./css/skinn/color-5.css" class="alternate-style" title="color-5" disabled>
+    <link rel="stylesheet" href="/css/skinn/color-1.css" class="alternate-style" title="color-1" disabled>
+    <link rel="stylesheet" href="/css/skinn/color-2.css" class="alternate-style" title="color-2" disabled>
+    <link rel="stylesheet" href="/css/skinn/color-3.css" class="alternate-style" title="color-3" disabled>
+    <link rel="stylesheet" href="/css/skinn/color-4.css" class="alternate-style" title="color-4" disabled>
+    <link rel="stylesheet" href="/css/skinn/color-5.css" class="alternate-style" title="color-5" disabled>
 
-    <link rel="stylesheet" href="./css/style-switcher.css">
+    <link rel="stylesheet" href="/css/style-switcher.css">
 </head>
 
 <body>
@@ -573,8 +573,8 @@
     <!-- js file -->
    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.16/typed.umd.js" integrity="sha512-+2pW8xXU/rNr7VS+H62aqapfRpqFwnSQh9ap6THjsm41AxgA0MhFRtfrABS+Lx2KHJn82UOrnBKhjZOXpom2LQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="./js/script.js"></script>
-    <script src="./js/styleSwitcher.js"></script>
+    <script src="/js/script.js"></script>
+    <script src="/js/styleSwitcher.js"></script>
 </body>
 
 </html>
